# capstone_welding_analysis

./: .gitignore  DOWNLOAD.PRM  DataAccess.cpp  INFO.txt  README.md  Ranger E Polling CPP.sln  Ranger E Polling CPP.vcxproj  ThreadSafePrint.cpp  dataformatexample.cpp  preprocessing_test_notebook.ipynb  rangere_ex.vcxproj.filters  requirements.txt  setup.bat  setup.sh  shape_test.ipynb
icon_reader_py/: icon_main.py  iconreader.py  readme.md
icon_reader_py/data/: circle_cover_buff.xml  zse_buff_1.xml  zse_buff_1_img.xml
icon_reader_py/docs/: icon_format.md
icon_reader_py/examples/: icon_plotter.py  icon_to_json_converter.py  icon_to_pcd_converter.py  icon_to_ply_converter.py
python_gui_py/: App.py
python_gui_py/data/: defects.json
python_gui_py/frames/: AutoCompleteEntry.py  CameraSettingsFrame.py  ExportFrame.py  ExportPLYFrame.py  InfoFrame.py  MenuFrame.py  NodeThread.py  PlotControlFrame.py  PlotFrame.py  SettingsFrame.py  cursors.py
python_gui_py/styles/: custom_dark_style.mplstyle  custom_light_style.mplstyle
python_gui_py/util/: Defects.py
ranger_e_cpp/: DataAccess.h  E55.PRM  HorMaxThr.prm  Ranger E Polling CPP.vcxproj  Ranger E Polling CPP.vcxproj.filters  ThreadSafePrint.h  rangere_ex.cpp  rangere_ex.vcproj  rangere_ex.vcxproj
ros2_ws/: timestamps_29-11-2023-14-44-13.csv  timestamps_ns_29-11-2023-14-43-36.csv
ros2_ws/19-01-2024-16-05-53/: timestamps_ns_19-01-2024-16-05-53.csv
ros2_ws/19-01-2024-16-06-47/: timestamps_ns_19-01-2024-16-06-47.csv
ros2_ws/19-01-2024-16-08-51/: timestamps_ns_19-01-2024-16-08-51.csv
ros2_ws/19-01-2024-16-10-10/: timestamps_ns_19-01-2024-16-10-10.csv
ros2_ws/19-01-2024-16-16-29/: timestamps_ns_19-01-2024-16-16-29.csv
ros2_ws/src/data_recorder/: package.xml  setup.cfg  setup.py
ros2_ws/src/data_recorder/data_recorder/: recorder.py
ros2_ws/src/interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/interfaces/msg/: Scan.msg
ros2_ws/src/ranger/: CMakeLists.txt  package.xml
ros2_ws/src/ranger/include/ranger/: RangerEHi3D.prm
ros2_ws/src/ranger/src/: DataAccess.cpp  ThreadSafePrint.cpp  scan.cpp
ros2_ws/src/scan_demo/: package.xml  setup.cfg  setup.py
ros2_ws/src/scan_demo/scan_demo/: subscriber.py
ros2_ws/src/scan_demo_ply/: package.xml  setup.cfg  setup.py
ros2_ws/src/scan_demo_ply/scan_demo_ply/: subscriber.py
rotator/: rotator_test_notebook.ipynb  test.ipynb
rotator/19-01-2024-15-40-52/: timestamps_ns_19-01-2024-15-40-52.csv
